# ap

./: Makefile  README.md
back/apps/server/: Cargo.toml
back/apps/server/src/: lib.rs  main.rs
back/apps/server/src/config/: database.rs  mod.rs  settings.rs
back/apps/server/src/modules/: mod.rs
back/apps/server/src/modules/auth/application/: mod.rs  request_otp.rs  resend_otp.rs  verify_otp.rs
back/apps/server/src/modules/auth/domain/: mod.rs  phone_number.rs  repository.rs  session.rs  user.rs  validation_code.rs
back/apps/server/src/modules/auth/infrastructure/: handlers.rs  mod.rs  otp_generator.rs  phone_notifier.rs  postgres_repository.rs
back/apps/server/src/modules/matching/application/: cancel_match_request.rs  get_match_status.rs  mod.rs  request_match.rs
back/apps/server/src/modules/matching/domain/: matching_queue_entry.rs  mod.rs  pairing.rs  repository.rs
back/apps/server/src/modules/matching/infrastructure/: handlers.rs  mod.rs  postgres_repository.rs
back/apps/server/src/modules/topics/application/: get_topics.rs  mod.rs
back/apps/server/src/modules/topics/domain/: mod.rs  repository.rs  topic.rs
back/apps/server/src/modules/topics/infrastructure/: handlers.rs  mod.rs  postgres_repository.rs
back/apps/server/src/modules/users/application/: get_user.rs  mod.rs  update_address.rs  update_profile.rs
back/apps/server/src/modules/users/domain/: mod.rs  (+1 more)
back/apps/server/src/server/: graceful_shutdown.rs  mod.rs  routes.rs
back/apps/server/src/shared/: app_state.rs  auth_middleware.rs  crypto.rs  error.rs  mod.rs  response.rs
(+76 files in other folders)
