[package]
name = "ap-back"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework HTTP
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Base de datos
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validación
validator = { version = "0.20.0", features = ["derive"] }

# Tipos
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errores
thiserror = "2.0.18"
anyhow = "1"

# Configuración
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Utilidades
rand = "0.10.0"
futures = "0.3"
async-trait = "0.1"

# Libs internas
whatsapp = { path = "../../libs/whatsapp" }

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"
